--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="This is my first website">
-        <meta name="author" content="Kuldeep Baghel">
+        <meta name="author" content="Vishal Soni">
         <meta name="keywords" content="memes">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kuldeep's Website</title>
@@ -11,7 +11,7 @@
     <body>
         <header>
 
-            <h1 style="text-align:center; color: rgb(38, 7, 88); background-color: burlywood;">Kuldeep's Website</h1>
+            <h1 style="text-align:center; color: rgb(38, 7, 88); background-color: burlywood;">Vishal's Website</h1>
         </header>
         <br/>
         <br/>
