--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Vishal Soni">
         <meta name="keywords" content="memes">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kuldeep's Website</title>
+        <title>Vishal's Website</title>
     </head>
     <body>
         <header>
